fix: contact style was overlaping the actual style

--- a/src/style.css
+++ b/src/style.css
@@ -425,7 +425,6 @@ p {
     background-color: rgba(255, 255, 255, 0.1);
     margin: 0.5rem;
     padding-bottom: 1.5rem;
-    width: 100%;
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.5);
     padding: 1.5rem;
 }
